fix: fixed calculation of columns

--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -100,7 +100,7 @@ Allow to use gap size on parent container
                   @include media('#{$operator2}#{$media-breakpoint-key2}') {
                       @each $key, $value in $_grid-layout-sizes {
                           .#{$col-name}#{$media-breakpoint-key2}-#{$key} {
-                              $adjusted-width: calc(#{$value} - #{$gap-value / (12 / $key)});
+                              $adjusted-width: calc((100% - (#{$gap-value} * (12 / #{$key} - 1))) / (12 / #{$key}));
                               flex: 0 0 #{$adjusted-width};
                               max-width: #{$adjusted-width};
                           }
